--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,19 @@ basepython = python3.3
 
 [testenv:py34]
 basepython = python3.4
+
+[testenv:py26-msgpack]
+basepython = python2.6
+deps = msgpack-python
+
+[testenv:py27-msgpack]
+basepython = python2.7
+deps = msgpack-python
+
+[testenv:py33-msgpack]
+basepython = python3.3
+deps = msgpack-python
+
+[testenv:py34-msgpack]
+basepython = python3.4
+deps = msgpack-python
