Added new tox environments to the build.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,11 @@
 envlist    = py26,
              py27,
              py33,
-             py34
+             py34,
+             py26-msgpack,
+             py27-msgpack,
+             py33-msgpack,
+             py34-msgpack
 [testenv]
 commands   = python test/test_rom.py
 deps       = redis
