Binary round tripping fix, see changelog.txt

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist    = py26,
              py27,
              py33,
-             py34
+             py34,
+             py35
 [testenv]
 commands   = python test/test_rom.py
 deps       = redis
@@ -18,3 +19,6 @@ basepython = python3.3
 
 [testenv:py34]
 basepython = python3.4
+
+[testenv:py35]
+basepython = python3.5
