--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ env:
     - REDIS_VERSION=2.8
     - REDIS_VERSION=3.0
 before_install:
+  - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+  - sudo bash -c "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list"
+  - sudo apt-get update
+  - sudo apt-get purge lxc-docker
   - sudo apt-get update
   - sudo apt-get install lxc-docker
   - docker pull redis:$REDIS_VERSION
