--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,8 @@ env:
 before_install:
   - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
   - sudo bash -c "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list"
-  - sudo apt-get update
-  - sudo apt-get purge lxc-docker
-  - sudo apt-get update
-  - sudo apt-get install docker-engine
-  - sudo service docker start
-  - docker pull redis:$REDIS_VERSION
-  - docker run -d -p 6379:6379 redis:$REDIS_VERSION
+  - sudo docker pull redis:$REDIS_VERSION
+  - sudo docker run -d -p 6379:6379 redis:$REDIS_VERSION
 install:
   - pip install tox
 script:
