--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,18 @@ python:
 sudo: required
 services:
   - docker
-  - redis-server
-redis-server:
-  - "2.6"
-  - "2.8"
-  - "3.0"
-  - "3.2"
-  - "4.0"
+env:
+  matrix:
+    - REDIS_VERSION=2.6
+    - REDIS_VERSION=2.8
+    - REDIS_VERSION=3.0
+    - REDIS_VERSION=3.2
+before_install:
+  - python -c 'import random,time; time.sleep(random.randrange(5, 35))'
+  - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+  - sudo bash -c "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list"
+  - sudo docker pull redis:$REDIS_VERSION
+  - sudo docker run -d -p 6379:6379 redis:$REDIS_VERSION
 install:
   - pip install tox
 script:
